# job_parser

./: README.md  pyproject.toml
src/: abstract_classes.py  config.py  hh_api.py  json_saver.py  main.py  sj_api.py  user_interface.py  vacancy.py
