[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Irina Klepova <ivklepova23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
